--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
+  <head>
 <link rel="stylesheet" href="./style.css" type="text/css">
 
   <!-- write your hero's name here in the <title> element  -->
-  <title></title>
+  <title>Hua Mulan</title>
 </head>
 
 
