--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 
 <body>
 
-  <div>
-    <div>
-      <div>
-        <div>
+  <div class="container">
+    <div class="jumbotron">
+      <div class="row">>
+        <divclass="col-xs-12">
           <!-- Main Heading; Give the person's name; use <h1> -->
           <h1>Hua Mulan</h1>
           <!-- Subheading; use <h2>  -->
